# OpenASVGazebo

./: README.md  commands
gazebo_maritime/: CMakeLists.txt
gazebo_maritime/models/openasv/: model.config  model.sdf
gazebo_maritime/models/openasv/meshes/: GPS.dae  propeller.dae
gazebo_maritime/worlds/: sydney_regatta.sdf
openASV_ROS2_Gazebo/: LICENSE
openASV_ROS2_Gazebo/openasv_gz/: CMakeLists.txt  package.xml
openASV_ROS2_Gazebo/openasv_gz/src/: BasicSystem.cc  FullSystem.cc  Surface.cc
openASV_ROS2_Gazebo/openasv_gz/worlds/: sydney_regatta.sdf
openASV_ROS2_Gazebo/openasv_gz_application/: CMakeLists.txt  package.xml
openASV_ROS2_Gazebo/openasv_gz_bringup/: CMakeLists.txt  package.xml
openASV_ROS2_Gazebo/openasv_gz_bringup/config/: openasv_ros_gz_bridge.yaml
openASV_ROS2_Gazebo/openasv_gz_bringup/launch/: openasv.launch.py
openASV_ROS2_Gazebo/openasv_gz_description/: CMakeLists.txt  package.xml
openASV_ROS2_Gazebo/openasv_gz_description/models/openasv/: model.config  model.sdf
